feat: introduce Isbn Value Object with EAN-13 validation and shared IsbnMapper
- Add `Isbn` VO (domain/model/vo) with EAN-13 format and check-digit validation; throws `IsbnException` (BAD_REQUEST) on invalid input
- Add `IsbnException` extending `LibraryException` with HTTP 400
- Add `ExceptionMessageConstants` entries for ISBN errors
- Replace `String isbn` with `Isbn isbn` in `Book` record and `CreateBookCommand`
- Rename `FindBookCommand` → `BookSearchCriteriaCommand` (@Builder class, not record); keeps `String isbn` for query flexibility
- Move not-found guard from controller to `BookRetrievalPersistenceRepository`; `BookRetrievalPersistencePort.execute()` now returns `Book` (singular)
- Add shared `IsbnMapper` at `infrastructure/mapper` (single source of truth); wire into `BookMapper`, `PostBookRequestMapper`, and `BookEntityMapper` via `uses`; remove duplicated default methods from each
- Add `GetBookResponseMapper` + `GetBookResponseMapperTest`
- Update all tests: use `Instancio.of(Book.class).set(field(...), new Isbn(...))` for validated VO, inject `@Spy IsbnMapperImpl` where needed, register `GlobalExceptionHandler` in standalone MockMvc

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>